...
                    UserProfileView()
                        .tabItem {
                            Label("Profile", systemImage: "3.circle")
                        }
                    RealtimeChatView()
                        .tabItem {
                            Label("Realtime", systemImage: "4.circle")
                        }
                    LeaderboardView()
                        .tabItem {
                            Label("Leaderboard", systemImage: "5.circle")
                        }
                }
...
